--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="glass-card scroll-anim">
                 <div class="profile-img-wrapper">
-                    <img src="images/1.jpg" alt="Profile" class="profile-img">
+                    <img src="images/1.png" alt="Profile" class="profile-img">
                 </div>
                 <div class="profile-text">
                     <h3 class="profile-name">MICHI</h3>
